--- a/webssh/templates/index.html
+++ b/webssh/templates/index.html
@@ -43,25 +43,25 @@
       <form id="connect" action="" method="post" enctype="multipart/form-data"{% if debug %} novalidate{% end %}>
         <div class="row">
           <div class="col">
-            <label for="Hostname">Hostname</label>
+            <label for="Hostname">Palvelimen osoite</label>
             <input class="form-control" type="text" id="hostname" name="hostname" value="" required>
           </div>
           <div class="col">
-            <label for="Port">Port</label>
+            <label for="Port">Portti</label>
             <input class="form-control" type="number" id="port" name="port" placeholder="22" value="" min=1 max=65535>
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <label for="Username">Username</label>
+            <label for="Username">Käyttäjä</label>
             <input class="form-control" type="text" id="username" name="username" value="" required>
           </div>
           <div class="col">
-            <label for="Password">Password</label>
+            <label for="Password">Salasana</label>
             <input class="form-control" type="password" id="password" name="password" value="">
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="display: none;">
           <div class="col">
             <label for="Username">Private Key</label>
             <input class="form-control" type="file" id="privatekey" name="privatekey" value="">
@@ -71,7 +71,7 @@
             <input class="form-control" type="password" id="passphrase" name="passphrase" value="">
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="display: none;">
           <div class="col">
             <label for="totp">Totp (time-based one-time password)</label>
             <input class="form-control" type="password" id="totp" name="totp" value="">
@@ -81,8 +81,8 @@
         </div>
         <input type="hidden" id="term" name="term" value="xterm-256color">
         {% module xsrf_form_html() %}
-        <button type="submit" class="btn btn-primary">Connect</button>
-        <button type="reset" class="btn btn-danger">Reset</button>
+        <button type="submit" class="btn btn-primary">Yhdistä</button>
+        <button type="reset" class="btn btn-danger">Tyhjennä</button>
       </form>
     </div>
 
